fix bug search files